--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+basic (1.0.3-0ubuntu1~noble1) noble; urgency=medium
+
+  * New upstream 1.0.3: ensure vendored Cargo.toml.orig files included.
+
+ -- root <erikolson1965@gmail.com>  Tue, 11 Nov 2025 04:23:45 +0000
+
 basic (1.0.1-0ubuntu1~noble1) noble; urgency=medium
 
   * New upstream 1.0.1: drop Cargo.lock to avoid lockfile v4 issue on
