--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+basic (1.0.4-0ubuntu1~noble1) noble; urgency=medium
+
+  * New upstream 1.0.4: vendor cleanup, remove Cargo.toml.orig and
+    checksums.
+
+ -- root <erikolson1965@gmail.com>  Tue, 11 Nov 2025 19:30:33 +0000
+
 basic (1.0.3-0ubuntu1~noble1) noble; urgency=medium
 
   * New upstream 1.0.3: ensure vendored Cargo.toml.orig files included.
